--- a/views/less/components/image-slider.less
+++ b/views/less/components/image-slider.less
@@ -16,8 +16,10 @@
         left: 100%;
         background-size: cover;
         background-position: center center;
-        transition: left ease-out;
+      }
 
+      .animate {
+        transition: left ease-out;
       }
 
       &:first-of-type {
