--- a/views/less/components/image-slider.less
+++ b/views/less/components/image-slider.less
@@ -19,12 +19,12 @@
       }
 
       .animate {
-        transition: left ease-out;
+        transition: transform ease-out;
       }
 
       &:first-of-type {
         .image {
-          left: 0;
+          transform: translateX(-100%);
         }
       }
     }
