--- a/views/templates/views/reanactment.hbs
+++ b/views/templates/views/reanactment.hbs
@@ -34,6 +34,11 @@
             "url": "../img/horse.jpg", 
             "heading":"Vikings",
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
+          },
+          { 
+            "url": "../img/horse.jpg", 
+            "heading":"Vikings",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
           }
         ]}'
       }}
