--- a/views/less/components/header.less
+++ b/views/less/components/header.less
@@ -1,6 +1,7 @@
 header {
   position: absolute;
   width: 100%;
+  background-color: @main-dark-faded;
 
   input[type=checkbox] {
     display: none;
@@ -19,7 +20,7 @@ header {
     padding: 1rem 0;
 
     @media (min-width: @screen-sm) {
-      padding: 3rem 0;
+      padding: 1rem 0;
     }
 
     > a, label {
@@ -27,8 +28,8 @@ header {
       width: 7rem;
 
       @media (min-width: @screen-sm) {
-        height: 9rem;
-        width: 9rem;
+        height: 7rem;
+        width: 7rem;
       }
     }
 
