--- a/views/less/variabels.less
+++ b/views/less/variabels.less
@@ -4,6 +4,7 @@
 @dark-dark: #000;
 @white: #fff;
 @main-light: #535353;
+@main-dark-faded: rgba(41, 41, 41, 0.2);
 
 /* Fonts */
 @main-font: 'norseregular';
