--- a/public/css/main.css
+++ b/public/css/main.css
@@ -744,6 +744,7 @@ a {
 header {
   position: absolute;
   width: 100%;
+  background-color: rgba(41, 41, 41, 0.2);
 }
 header input[type=checkbox] {
   display: none;
@@ -760,7 +761,7 @@ header .content {
 }
 @media (min-width: 768px) {
   header .content {
-    padding: 3rem 0;
+    padding: 1rem 0;
   }
 }
 header .content > a,
@@ -771,8 +772,8 @@ header .content label {
 @media (min-width: 768px) {
   header .content > a,
   header .content label {
-    height: 9rem;
-    width: 9rem;
+    height: 7rem;
+    width: 7rem;
   }
 }
 header .content #logo {
