Add controlls to slider

--- a/views/templates/components/image-slider.hbs
+++ b/views/templates/components/image-slider.hbs
@@ -12,8 +12,8 @@
    {{/each}} 
   </div>
   <div class="slide-controllers">
-    <img src="../img/arrow-left.svg"/>
-    <img src="../img/arrow-right.svg"/>
+    <img class="btnPrev" src="../img/arrow-left.svg"/>
+    <img class="btnNext" src="../img/arrow-right.svg"/>
   </div>
 </div>
 {{/json}}
