--- a/views/templates/views/reanactment.hbs
+++ b/views/templates/views/reanactment.hbs
@@ -36,7 +36,7 @@
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
           },
           { 
-            "url": "../img/horse.jpg", 
+            "url": "../img/profile.jpg", 
             "heading":"Vikings",
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
           }
