--- a/views/templates/components/image-slider.hbs
+++ b/views/templates/components/image-slider.hbs
@@ -3,6 +3,7 @@
   <div class="images">
     {{#each images}}
       <div class="sliding-element {{#ifCond @index 0}}active{{/ifCond}}">
+        <div class="image-overlay"></div>
         <div class="image" style="background-image:url({{this.url}})"></div>
         <div class="content">
             <h3>{{this.heading}}</h3>
