--- a/views/less/components/image-slider.less
+++ b/views/less/components/image-slider.less
@@ -5,7 +5,6 @@
 
   .images {
     height: 100%;
-    background: linear-gradient(to bottom, transparent 50%, black);
 
     .sliding-element {
       transform: translateX(0%);
@@ -14,6 +13,14 @@
       left: 100%;
       height: 100%;
       width: 100%;
+      
+      .image-overlay {
+        position: absolute;
+        z-index: 2;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(to bottom, transparent 50%, black);
+      }
 
       .image {
         height: 100%;
@@ -29,6 +36,10 @@
       &.active {
         transform: translateX(-100%);
       }
+
+      .content {
+        z-index: 3;
+      }
     }
   }
 
@@ -43,13 +54,19 @@
       @media (min-width: @screen-sm) {
         height: 8rem;
         margin: 0 1.5rem;
+        background-color: @main-dark-semi-faded;
+        padding: 1.5rem;
       }
-
+      
       &:first-of-type {
         float: left;
       }
       &:last-of-type {
         float: right;
+      }
+
+      &:hover {
+        cursor: pointer;
       }
     }
   }
