--- a/views/less/variabels.less
+++ b/views/less/variabels.less
@@ -5,6 +5,7 @@
 @white: #fff;
 @main-light: #535353;
 @main-dark-faded: rgba(41, 41, 41, 0.2);
+@main-dark-semi-faded: rgba(41, 41, 41, 0.4);
 
 /* Fonts */
 @main-font: 'norseregular';
