--- a/views/less/components/menu.less
+++ b/views/less/components/menu.less
@@ -7,6 +7,15 @@
   top: 0;
   background-color: @main-dark;
 
+  @media (min-width: @screen-sm) {
+    display: block;
+    position: initial;
+    background-color: transparent;
+    width: initial;
+    height: initial;
+    line-height: 5rem;
+  }
+
   label {
     height: 4rem;
     width: 4rem;
@@ -14,7 +23,7 @@
     margin-top: 1rem;
     margin-right: 1rem;
 
-    &:after{
+    &:after {
       content: " ";
       display: block; 
       clear: both;
@@ -24,6 +33,10 @@
       width: 100%;
       height: 100%;
     }
+
+    @media (min-width: @screen-sm) {
+      display: none;
+    }
   }
 
   ul {
@@ -31,25 +44,27 @@
     padding-top: 25vh;
 
     @media (min-width: @screen-sm) {
-      width: 40%;
-      margin: 0 auto;
+      margin: 0 0 0 2rem;
+      padding: 0;
     }
 
     li {
-      @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-      @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-      @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-      .fade-animation(fadeIn, 0.5s);
+      @media (max-width: @screen-sm) {
+        @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+        @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+        @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+        .fade-animation(fadeIn, 0.5s);
 
-      .delay(3);      
-      .delay(@n, @i: 1) when (@i =< @n) {
-        &:nth-child(@{i}) {
-          @delay: (100ms + (@i * 110));
-          -webkit-animation-delay: @delay;
-          -moz-animation-delay: @delay;
-          animation-delay: @delay;
+        .delay(3);      
+        .delay(@n, @i: 1) when (@i =< @n) {
+          &:nth-child(@{i}) {
+            @delay: (100ms + (@i * 110));
+            -webkit-animation-delay: @delay;
+            -moz-animation-delay: @delay;
+            animation-delay: @delay;
+          }
+          .delay(@n, (@i + 1));
         }
-        .delay(@n, (@i + 1));
       }
     
       margin: 1rem 0;
@@ -59,12 +74,32 @@
       border-bottom: 2px solid @dark-dark;
 
       @media (min-width: @screen-sm) {
-        margin: 3rem 0;
+        border-bottom: none;
+        display: inline-block;
+        margin: 0 2rem;
+        font-size: 4rem;
+        position: relative;
       }
 
       a {
         display: block;
         padding: 1rem 0;
+
+        &:before {
+          content: '';
+          width: 0;
+          height: 2px;
+          background-color: @main-dark-semi-faded;
+          -webkit-transition: all 0.3s ease-out;
+          transition: all 0.3s ease-out;
+          position:absolute;
+          left:0;
+          bottom:0;
+        }
+
+        &:hover:before {
+          width: 100%;
+        }
       }
     }
   }
