--- a/views/less/main.less
+++ b/views/less/main.less
@@ -3,6 +3,7 @@
 @import "views/start";
 @import "views/reanactment";
 @import "views/hire-us";
+@import "views/about";
 
 /* Components */
 @import "components/header";
