--- a/views/templates/components/footer.hbs
+++ b/views/templates/components/footer.hbs
@@ -2,9 +2,9 @@
   <div class="content">
     <nav>
       <ul>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/about">Contact</a></li>
         <li><a href="#">Media</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="/about">About</a></li>
       </ul>
       <ul class="social-media">
         <li><a href="#" id="facebook-contact"></a></li>
