Way to big commit...

--- a/views/less/main.less
+++ b/views/less/main.less
@@ -22,6 +22,7 @@
 @import "view-mixins/text-and-image-section";
 @import "view-mixins/text-section";
 @import "view-mixins/image-section";
+@import "view-mixins/cards-section";
 
 /* Variabels */
 @import "variabels";
