--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,7 @@ body {
 h1,
 h2 {
   font-family: 'norseregular';
+  font-weight: normal;
   margin: 0;
 }
 h1 {
@@ -744,7 +745,7 @@ a {
   position: relative;
   z-index: -1;
   min-height: 100vh;
-  background: linear-gradient(to bottom, transparent 50%, black), url('../img/lineup.jpg');
+  background: linear-gradient(to bottom, transparent 50%, black), url('../img/all-of-us.png');
   background-size: cover;
   background-position: center center;
 }
@@ -837,7 +838,7 @@ a {
 }
 #about .training-section {
   min-height: 90vh;
-  background: linear-gradient(to left, transparent, black), url('../img/fighters.png');
+  background: linear-gradient(to left, transparent, black), url('../img/training.png');
   background-size: cover;
   background-position: center left;
 }
@@ -882,19 +883,180 @@ a {
   display: block;
   clear: both;
 }
-#about .join-us-section {
-  background-color: #000;
+#about .friends-section {
+  min-height: 90vh;
+  background-color: #292929;
+  display: flex;
+  align-items: center;
 }
-#about .join-us-section .content {
-  padding: 0 1.5rem;
-  margin: 0;
-  display: table;
-  width: 100%;
-  box-sizing: border-box;
+@media (min-width: 768px) {
+  #about .friends-section .content {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
-#about .join-us-section .content > div {
+@media (min-width: 1200px) {
+  #about .friends-section .content {
+    width: 50%;
+  }
+}
+#about .friends-section img {
+  display: block;
+  height: 5rem;
+  width: 5rem;
+  margin: 2rem auto 0 auto;
+}
+@media (min-width: 768px) {
+  #about .friends-section img {
+    height: 7rem;
+    width: 7rem;
+    margin-bottom: 8rem;
+  }
+}
+#about .friends-section h2 {
+  font-size: 5rem;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  #about .friends-section h2 {
+    font-size: 6rem;
+  }
+}
+#about .friends-section h3 {
+  color: #FF5151;
+  font-size: 5rem;
+  margin-bottom: 0;
+  margin-top: 3rem;
+}
+@media (min-width: 768px) {
+  #about .friends-section h3 {
+    float: left;
+    margin-top: 0;
+    line-height: 1;
+    margin-right: 1rem;
+    font-size: 7rem;
+  }
+}
+#about .friends-section p {
+  color: #fff;
+  margin-top: 0;
+}
+@media (min-width: 768px) {
+  #about .friends-section p:after {
+    content: " ";
+    display: block;
+    clear: both;
+  }
+}
+#about .friends-section ul {
   padding: 0;
-  padding-top: 15vh;
+}
+#about .friends-section ul li {
+  display: inline-block;
+  list-style-type: none;
+  height: 4rem;
+  width: 30%;
+}
+#about .thanks-section {
+  min-height: 90vh;
+  background-color: #292929;
+  display: flex;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  #about .thanks-section .content {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1200px) {
+  #about .thanks-section .content {
+    width: 50%;
+  }
+}
+#about .thanks-section img {
+  display: block;
+  height: 5rem;
+  width: 5rem;
+  margin: 2rem auto 0 auto;
+}
+@media (min-width: 768px) {
+  #about .thanks-section img {
+    height: 7rem;
+    width: 7rem;
+    margin-bottom: 8rem;
+  }
+}
+#about .thanks-section h2 {
+  font-size: 5rem;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  #about .thanks-section h2 {
+    font-size: 6rem;
+  }
+}
+#about .thanks-section h3 {
+  color: #FF5151;
+  font-size: 5rem;
+  margin-bottom: 0;
+  margin-top: 3rem;
+}
+@media (min-width: 768px) {
+  #about .thanks-section h3 {
+    float: left;
+    margin-top: 0;
+    line-height: 1;
+    margin-right: 1rem;
+    font-size: 7rem;
+  }
+}
+#about .thanks-section p {
+  color: #fff;
+  margin-top: 0;
+}
+@media (min-width: 768px) {
+  #about .thanks-section p:after {
+    content: " ";
+    display: block;
+    clear: both;
+  }
+}
+#about .contact-us-section {
+  background-color: #000;
+  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0) 50%, #000000 100%), url('../img/aaron.png'), #000;
+  background-repeat: no-repeat;
+  background-position: center left;
+  padding-top: 10vh;
+}
+@media (min-width: 768px) {
+  #about .contact-us-section {
+    background-size: contain;
+  }
+}
+@media (min-width: 1200px) {
+  #about .contact-us-section .content {
+    width: 40%;
+    margin-left: 60%;
+    text-align: left;
+  }
+}
+#about .contact-us-section .content h2 {
+  text-align: left;
+  font-size: 6rem;
+}
+#about .contact-us-section .content h3 {
+  color: #FF5151;
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+#about .contact-us-section .button-component {
+  margin-top: 5rem;
+}
+@media (min-width: 550px) {
+  #about .contact-us-section .button-component {
+    text-align: left;
+  }
 }
 /* Components */
 header {
