--- a/views/less/views/about.less
+++ b/views/less/views/about.less
@@ -2,7 +2,7 @@
   .top-section {
     position: relative;
     z-index: -1;
-    .top-section('../img/lineup.jpg');
+    .top-section('../img/all-of-us.png');
     .content {
       position: absolute;
       bottom: 9rem;
@@ -20,22 +20,53 @@
   }
 
   .training-section {
-    .text-and-image-section('left', '../img/fighters.png');
+    .text-and-image-section('left', '../img/training.png');
   }
 
-  .join-us-section {
+  .friends-section {
+    .text-section();
+    .cards-section();
+  }
+
+  .thanks-section {
+    .text-section();
+  }
+
+  .contact-us-section {
     background-color: @dark-dark;
+    background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 100%), 
+    url('../img/aaron.png'), @dark-dark;
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-top: 10vh;
+
+    @media (min-width: @screen-sm) {
+      background-size: contain;
+    }
 
     .content {
-      padding: 0 1.5rem;
-      margin: 0;
-      display: table;
-      width: 100%;
-      box-sizing: border-box;
+      @media (min-width: @screen-l) {
+        width: 40%;
+        margin-left: 60%;
+        text-align: left;
+      }
 
-      > div {
-        padding: 0;
-        padding-top: 15vh;
+      h2 {
+        text-align: left;
+        font-size: 6rem;
+      }
+
+      h3 {
+        color: @red;
+        font-size: 3rem;
+        margin-bottom: 0;
+      }
+    }
+
+    .button-component {
+      margin-top: 5rem;
+      @media (min-width: @screen-xs) {
+        text-align: left;
       }
     }
   }
