--- a/views/templates/components/menu.hbs
+++ b/views/templates/components/menu.hbs
@@ -1,11 +1,11 @@
 <div id="menu-component">
   <div class="content">
-     <label for="open-close-menu"><img src="../img/close.svg"/></label>
+     <label for="open-close-menu"><img src="./img/close.svg"/></label>
     <nav>
       <ul>
-        <li><a href="/">Start</a></li>
-        <li><a href="/reanactment">Reanactment</a></li>
-        <li><a href="/hire-us">Hire Us</a></li>
+        <li><a href="./index.html">Start</a></li>
+        <li><a href="./reanactment.html">Reanactment</a></li>
+        <li><a href="./hire-us.html">Hire Us</a></li>
       </ul>
     </nav>
   </div>
