--- a/views/templates/views/about.hbs
+++ b/views/templates/views/about.hbs
@@ -1,9 +1,5 @@
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+  {{>head title='About'}}
   <body id="about">
     {{>header}}
     <section class="top-section">
@@ -12,11 +8,12 @@
         <h2>Contact & general info</h2>
       </div>
     </section>
+
     <section class="jomsborg-section">
       <div class="content">
-        <h2>Part of Jomsborg</h2>
-        <img src="../img/viking-icon.svg"/>
-        <h3>Jomsborg</h3>
+        <h2>Based in Malmö</h2>
+        <img src="./img/viking-icon.svg"/>
+        <h3>Organisation</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
@@ -30,7 +27,7 @@
     <section class="training-section">
       <div class="content">
         <h2>Training</h2>
-        <h3>Sword <span class="no-wrap">· Axe</span> <span class="no-wrap">· Spear</span></h3>
+        <h3>How to get started</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
@@ -41,13 +38,48 @@
       </div>
     </section>
 
-    <section class="join-us-section">
-        {{>contact-form
-          h2='Become a viking' 
-          h3="Join us"
-        }}
+    <section class="jomsborg-section">
+      <div class="content">
+        <h2>Part of Jomsborg</h2>
+        <img src="./img/viking-icon.svg"/>
+        <h3>Jomsborg</h3>
+        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
+          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
+          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
+          Sirloin burgdoggen pastrami bacon.
+        </p>
+      </div>
+    </section>
+
+    <section class="thanks-section">
+      <div class="content">
+        <h2>Special thanks to</h2>
+        <img src="./img/viking-icon.svg"/>
+        <ul>
+          <li>
+            <p>Pernilla</p>
+          </li>
+          <li>
+            <p>Pernilla 2</p>
+          </li>
+          <li>
+            <p>Pernilla 3</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="contact-us-section">
+      <div class="content">
+        <h3>Get in touch</h3>
+        <h2>Contact us</h2>
+        <p>somemail@skanelag.se</p>
+        <p>0706645406</p>
+      </div>
     </section>
     {{>footer}}
-    <script src="/js/main.js"></script>
+    {{>scripts}}
   </body>
 </html>
