--- a/views/templates/views/start.hbs
+++ b/views/templates/views/start.hbs
@@ -1,9 +1,5 @@
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+  {{>head title='Start'}}
   <body id="start">
     {{>header}}
     <section class="top-section">
@@ -11,12 +7,12 @@
         <h1>Skåne Lag</h1>
         <h2>Viking age renactors</h2>
       </div>
-      <img src="../img/there-is-more.svg"/>
+      <img src="./img/there-is-more.svg"/>
     </section>
     <section class="reanactment-section">
       <div class="content">
         <h2>Reanactment</h2>
-        <img src="../img/viking-icon.svg"/>
+        <img src="./img/viking-icon.svg"/>
         <h3>Warriors</h3>
         <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
           Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
@@ -59,6 +55,6 @@
       </div>
     </section>
     {{>footer}}
-    <script src="/js/main.js"></script>
+    {{>scripts}}
   </body>
 </html>
