--- a/views/less/components/button.less
+++ b/views/less/components/button.less
@@ -5,9 +5,11 @@
   @media (min-width: @screen-sm) {
     margin-top: 10rem;
   }
-
+  
   a,
   &-form {
+    border-radius: 0;
+    -webkit-appearance: none;
     font-family: @main-font;
     font-size: 4rem;
     border: 1px solid @white;
