--- a/views/less/main.less
+++ b/views/less/main.less
@@ -12,6 +12,7 @@
 @import "components/button";
 @import "components/contact-form";
 @import "components/image-slider";
+@import "components/video";
 
 /* Mixins */
 @import "mixins/border-radius";
