--- a/views/less/variabels.less
+++ b/views/less/variabels.less
@@ -6,6 +6,7 @@
 @main-light: #535353;
 @main-dark-faded: rgba(41, 41, 41, 0.2);
 @main-dark-semi-faded: rgba(41, 41, 41, 0.4);
+@main-dark-dark-faded: rgba(41, 41, 41, 0.6);
 
 /* Fonts */
 @main-font: 'norseregular';
