--- a/views/less/components/image-slider.less
+++ b/views/less/components/image-slider.less
@@ -9,7 +9,6 @@
     .sliding-element {
       transform: translateX(0%);
       position: absolute;
-      z-index: -1;
       left: 100%;
       height: 100%;
       width: 100%;
@@ -44,6 +43,7 @@
   }
 
   .slide-controllers {
+    visibility: hidden;
     position: relative;
     top: -55%;
     z-index: 1;
