--- a/views/less/components/menu.less
+++ b/views/less/components/menu.less
@@ -100,6 +100,10 @@
         &:hover:before {
           width: 100%;
         }
+
+        &.active:before {
+          width: 100%;
+        } 
       }
     }
   }
