--- a/views/templates/views/reanactment.hbs
+++ b/views/templates/views/reanactment.hbs
@@ -34,7 +34,9 @@
           { 
             "url": "./img/profile.jpg", 
             "heading":"Vikings",
-            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.",
+            "isVideo": true,
+            "video-id": "oNEW4qPacGw"
           }
         ]}'
       }}
