Way to big commit!

--- a/views/less/main.less
+++ b/views/less/main.less
@@ -4,6 +4,7 @@
 @import "views/reanactment";
 @import "views/hire-us";
 @import "views/about";
+@import "views/vikings";
 
 /* Components */
 @import "components/header";
