--- a/views/less/views/about.less
+++ b/views/less/views/about.less
@@ -23,13 +23,13 @@
     .text-and-image-section('left', '../img/training.png');
   }
 
-  .friends-section {
-    .text-section();
-    .cards-section();
+  .image-slide-section {
+    .image-section();
   }
 
   .thanks-section {
     .text-section();
+    .cards-section();
   }
 
   .contact-us-section {
