--- a/views/templates/views/hire-us.hbs
+++ b/views/templates/views/hire-us.hbs
@@ -20,6 +20,10 @@
           turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
           Sirloin burgdoggen pastrami bacon.
         </p>
+        {{> button 
+          text='The Vikings' 
+          link="./vikings.html" 
+        }}
       </div>
     </section>
 
