--- a/public/css/main.css
+++ b/public/css/main.css
@@ -883,79 +883,33 @@ a {
   display: block;
   clear: both;
 }
-#about .friends-section {
-  min-height: 90vh;
-  background-color: #292929;
-  display: flex;
-  align-items: center;
+#about .image-slide-section {
+  height: 90vh;
+}
+#about .image-slide-section .content {
+  position: absolute;
+  bottom: 5rem;
+  padding-bottom: 0;
 }
 @media (min-width: 768px) {
-  #about .friends-section .content {
-    width: 80%;
-    margin: 0 auto;
+  #about .image-slide-section .content {
+    margin-left: 10%;
   }
 }
-@media (min-width: 1200px) {
-  #about .friends-section .content {
-    width: 50%;
-  }
-}
-#about .friends-section img {
-  display: block;
-  height: 5rem;
-  width: 5rem;
-  margin: 2rem auto 0 auto;
-}
-@media (min-width: 768px) {
-  #about .friends-section img {
-    height: 7rem;
-    width: 7rem;
-    margin-bottom: 8rem;
-  }
-}
-#about .friends-section h2 {
+#about .image-slide-section .content h3 {
+  color: #FF5151;
   font-size: 5rem;
-  text-align: center;
+  margin: 0;
 }
 @media (min-width: 768px) {
-  #about .friends-section h2 {
+  #about .image-slide-section .content h3 {
     font-size: 6rem;
   }
 }
-#about .friends-section h3 {
-  color: #FF5151;
-  font-size: 5rem;
-  margin-bottom: 0;
-  margin-top: 3rem;
-}
 @media (min-width: 768px) {
-  #about .friends-section h3 {
-    float: left;
-    margin-top: 0;
-    line-height: 1;
-    margin-right: 1rem;
-    font-size: 7rem;
+  #about .image-slide-section .content p {
+    max-width: 40%;
   }
-}
-#about .friends-section p {
-  color: #fff;
-  margin-top: 0;
-}
-@media (min-width: 768px) {
-  #about .friends-section p:after {
-    content: " ";
-    display: block;
-    clear: both;
-  }
-}
-#about .friends-section ul {
-  padding: 0;
-}
-#about .friends-section ul li {
-  display: inline-block;
-  list-style-type: none;
-  height: 4rem;
-  width: 30%;
 }
 #about .thanks-section {
   min-height: 90vh;
@@ -1022,6 +976,57 @@ a {
     clear: both;
   }
 }
+#about .thanks-section .content {
+  margin: 0 auto;
+  width: 80%;
+}
+#about .thanks-section .content ul {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+#about .thanks-section .content ul li {
+  font-family: 'norseregular';
+  text-align: center;
+  display: inline-block;
+  list-style-type: none;
+  background-color: #000;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  width: 100%;
+  margin: 2rem auto;
+}
+@media (min-width: 768px) {
+  #about .thanks-section .content ul li {
+    width: 30%;
+  }
+}
+#about .thanks-section .content ul li:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+}
+#about .thanks-section .content ul li p {
+  margin: 1rem 0;
+}
+#about .thanks-section .content ul li div {
+  background-color: #535353;
+  padding: 2rem 0;
+}
+#about .thanks-section .content ul li div .icon {
+  width: 12rem;
+  height: 12rem;
+  margin: 0 auto;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  border: 6px solid #292929;
+  background-size: cover;
+  padding: 0;
+}
 #about .contact-us-section {
   background-color: #000;
   background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0) 50%, #000000 100%), url('../img/aaron.png'), #000;
@@ -1057,6 +1062,48 @@ a {
   #about .contact-us-section .button-component {
     text-align: left;
   }
+}
+#vikings .top-section {
+  background-color: #000;
+}
+#vikings .top-section .content {
+  padding: 0;
+  padding-top: 15vh;
+  padding-bottom: 15vh;
+}
+#vikings .top-section .content h1,
+#vikings .top-section .content h2 {
+  text-align: center;
+}
+#vikings .top-section .content h2 {
+  color: #FF5151;
+}
+#vikings .vikings-section {
+  padding-bottom: 10rem;
+}
+#vikings .vikings-section .content {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+#vikings .vikings-section .content .column {
+  flex: 30%;
+  max-width: 30%;
+  padding: 0 4px;
+}
+#vikings .vikings-section .content .column div {
+  background-color: #000;
+  vertical-align: middle;
+  margin-top: 40px;
+  width: 100%;
+}
+#vikings .vikings-section .content .column div h2 {
+  font-size: 4rem;
+  padding: 2rem;
+}
+#vikings .vikings-section .content .column div img {
+  width: 100%;
 }
 /* Components */
 header {
@@ -1564,8 +1611,6 @@ footer:after {
 }
 .video-component .video-play-icon:hover {
   background-color: rgba(41, 41, 41, 0.6);
-}
-.video-component .video-play-icon:hover {
   cursor: pointer;
 }
 .video-component .video-overlay {
