--- a/views/templates/views/reanactment.hbs
+++ b/views/templates/views/reanactment.hbs
@@ -37,6 +37,13 @@
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.",
             "isVideo": true,
             "video-id": "oNEW4qPacGw"
+          },
+          { 
+            "url": "./img/profile.jpg", 
+            "heading":"Vikings",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.",
+            "isVideo": true,
+            "video-id": "lXRfzcWN0jk"
           }
         ]}'
       }}
