One more big commit...

--- a/views/templates/components/footer.hbs
+++ b/views/templates/components/footer.hbs
@@ -7,7 +7,7 @@
         <li><a href="./about.html">About</a></li>
       </ul>
       <ul class="social-media">
-        <li><a href="#" id="facebook-contact"></a></li>
+        <li><a href="https://www.facebook.com/SkaneLagJomsborg/" id="facebook-contact"></a></li>
       </ul>
     </nav>
   </div>
