--- a/views/templates/views/about.hbs
+++ b/views/templates/views/about.hbs
@@ -111,12 +111,10 @@
     </section>
 
     <section class="contact-us-section">
-      <div class="content">
-        <h3>Get in touch</h3>
-        <h2>Contact us</h2>
-        <p>somemail@skanelag.se</p>
-        <p>0706645406</p>
-      </div>
+      {{>contact-form
+        h2='Become a viking' 
+        h3="Join us"
+      }}
     </section>
     {{>footer}}
     {{>scripts}}
