--- a/views/less/components/contact-form.less
+++ b/views/less/components/contact-form.less
@@ -3,7 +3,7 @@
     padding: 0 1.5rem;
     margin: 0;
     display: table;
-    width: 100%;
+    min-height: 65vh;
     box-sizing: border-box;
 
     > div {
@@ -50,7 +50,37 @@
         font-size: 3rem;
       }
 
-      form {
+      > div {
+        display: block;
+        width: 60%;
+        margin: 3rem auto;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        .icon {
+          height: 5rem;
+          width: 5rem;
+          .border-radius(50%);
+          background-color: white;
+        }
+
+        .content-wrapper {
+          padding-left: 2rem;
+
+          label {
+            display: block;
+            font-family: @main-font;
+            color: @red;
+          }
+
+          p {
+            margin: 0;
+          }
+        }
+      }
+
+      /*form {
         margin-top: 2rem;
 
         label,
@@ -76,7 +106,7 @@
             border-bottom: 3px solid @white;
           }
         }
-      }
+      }*/
 
       .button-component-form {
         display: block;
