--- a/views/less/views/about.less
+++ b/views/less/views/about.less
@@ -34,39 +34,17 @@
 
   .contact-us-section {
     background-color: @dark-dark;
-    background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 100%), 
-    url('../img/aaron.png'), @dark-dark;
-    background-repeat: no-repeat;
-    background-position: center left;
-    padding-top: 10vh;
-
-    @media (min-width: @screen-sm) {
-      background-size: contain;
-    }
 
     .content {
-      @media (min-width: @screen-l) {
-        width: 40%;
-        margin-left: 60%;
-        text-align: left;
-      }
+      padding: 0 1.5rem;
+      margin: 0;
+      display: table;
+      width: 100%;
+      box-sizing: border-box;
 
-      h2 {
-        text-align: left;
-        font-size: 6rem;
-      }
-
-      h3 {
-        color: @red;
-        font-size: 3rem;
-        margin-bottom: 0;
-      }
-    }
-
-    .button-component {
-      margin-top: 5rem;
-      @media (min-width: @screen-xs) {
-        text-align: left;
+      > div {
+        padding: 0;
+        padding-top: 15vh;
       }
     }
   }
