--- a/views/templates/components/contact-form.hbs
+++ b/views/templates/components/contact-form.hbs
@@ -4,7 +4,21 @@
     <div class="form-container">
       <h3>{{h3}}</h3>
       <h2>{{h2}}</h2>
-      <form>
+      <div>
+        <div class="icon phone"></div>
+        <div class="content-wrapper">
+          <label>Phone</label>
+          <p>070-6645406</p>
+        </div>
+      </div>
+      <div>
+        <div class="icon email"></div>
+        <div class="content-wrapper">
+          <label>E-mail</label>
+          <p>some-mail@skanelag.se</p>
+        </div>
+      </div>
+      <!--<form>
         <label>Name</label>
         <input type="text">
         <label>Email</label>
@@ -12,7 +26,7 @@
         <label>Message</label>
         <textarea rows="3"></textarea>
         <input class="button-component-form" type="submit" value="Send">
-      </form>
+      </form>-->
     </div>
   </div>
 </div>
