--- a/views/templates/components/head.hbs
+++ b/views/templates/components/head.hbs
@@ -4,4 +4,9 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="./css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Skåne Lag" />
+  <meta property="og:description" content="How much does culture influence creative thinking?" />
+  <meta property="og:image" content="./img/someImage.jpg" />
 </head>
