Add favicons, general improvments, firebase support, etc

--- a/views/less/components/contact-form.less
+++ b/views/less/components/contact-form.less
@@ -52,17 +52,28 @@
 
       > div {
         display: block;
-        width: 60%;
         margin: 3rem auto;
         display: flex;
         justify-content: flex-start;
         align-items: center;
 
+        @media (min-width: @screen-sm) {
+          width: 60%;
+        }
+
         .icon {
           height: 5rem;
           width: 5rem;
           .border-radius(50%);
-          background-color: white;
+          border: 1px solid @white;
+          
+          &.email {
+            background: url('../img/mail-icon.svg');
+          }
+
+          &.phone {
+            background: url('../img/phone-icon.svg');
+          }
         }
 
         .content-wrapper {
