--- a/views/less/components/contact-form.less
+++ b/views/less/components/contact-form.less
@@ -12,7 +12,7 @@
     }
     .image-container {
       display: none;
-      @media (min-width: @screen-sm) {
+      @media (min-width: @screen-m) {
         display: table-cell;
       }
 
@@ -27,7 +27,7 @@
     }
 
     .form-container {
-      @media (min-width: @screen-sm) {
+      @media (min-width: @screen-m) {
         width: 50%;
       }
       float: none;
