--- a/views/less/view-mixins/image-section.less
+++ b/views/less/view-mixins/image-section.less
@@ -22,6 +22,10 @@
 
     p {
       @media (min-width: @screen-sm) {
+        max-width: 60%;
+      }
+
+      @media (min-width: @screen-m) {
         max-width: 40%;
       }
     }
