--- a/views/less/view-mixins/text-and-image-section.less
+++ b/views/less/view-mixins/text-and-image-section.less
@@ -30,8 +30,12 @@
     }
 
     @media (min-width: @screen-sm) {
-      width: 50%;
+      width: 60%;
       padding-top: 14vh;
+    }
+
+    @media (min-width: @screen-m) {
+      width: 50%;
     }
 
     @media (min-width: @screen-l) {
