--- a/views/less/views/reanactment.less
+++ b/views/less/views/reanactment.less
@@ -11,6 +11,16 @@
       h2 {
         text-align: left;
       }
+
+      @media (max-width: @screen-m) {
+        h1 {
+          font-size: 14rem;
+        }
+        
+        h2 {
+          font-size: 8rem;
+        }
+      }
     }
   }
 
